Fixed pom.xml, updated reports and fixed checkstyle issues

--- a/dokumentaatio/checkstyle-raportti/xref/overview-frame.html
+++ b/dokumentaatio/checkstyle-raportti/xref/overview-frame.html
@@ -16,13 +16,22 @@
 
 		<ul>
 						<li>
-				<a href="./package-frame.html" target="packageFrame">(default package)</a>
+				<a href="fi/lyma/minesweeper/event/package-frame.html" target="packageFrame">fi.lyma.minesweeper.event</a>
 			</li>
 						<li>
-				<a href="fi/lyma/logic/package-frame.html" target="packageFrame">fi.lyma.logic</a>
+				<a href="fi/lyma/minesweeper/gui/package-frame.html" target="packageFrame">fi.lyma.minesweeper.gui</a>
+			</li>
+						<li>
+				<a href="fi/lyma/minesweeper/logic/package-frame.html" target="packageFrame">fi.lyma.minesweeper.logic</a>
+			</li>
+						<li>
+				<a href="fi/lyma/minesweeper/main/package-frame.html" target="packageFrame">fi.lyma.minesweeper.main</a>
 			</li>
 						<li>
 				<a href="fi/lyma/testutil/package-frame.html" target="packageFrame">fi.lyma.testutil</a>
+			</li>
+						<li>
+				<a href="fi/lyma/util/package-frame.html" target="packageFrame">fi.lyma.util</a>
 			</li>
 					</ul>
 
