--- a/dokumentaatio/checkstyle-raportti/xref/overview-summary.html
+++ b/dokumentaatio/checkstyle-raportti/xref/overview-summary.html
@@ -35,17 +35,32 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="./package-summary.html">(default package)</a>
+                		<a href="fi/lyma/minesweeper/event/package-summary.html">fi.lyma.minesweeper.event</a>
               		</td>
             	</tr>
 	          	            	<tr>
               		<td>
-                		<a href="fi/lyma/logic/package-summary.html">fi.lyma.logic</a>
+                		<a href="fi/lyma/minesweeper/gui/package-summary.html">fi.lyma.minesweeper.gui</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="fi/lyma/minesweeper/logic/package-summary.html">fi.lyma.minesweeper.logic</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="fi/lyma/minesweeper/main/package-summary.html">fi.lyma.minesweeper.main</a>
               		</td>
             	</tr>
 	          	            	<tr>
               		<td>
                 		<a href="fi/lyma/testutil/package-summary.html">fi.lyma.testutil</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="fi/lyma/util/package-summary.html">fi.lyma.util</a>
               		</td>
             	</tr>
 	          	        	</tbody>
