--- a/dokumentaatio/pit-raportti/fi.lyma.minesweeper.logic/index.html
+++ b/dokumentaatio/pit-raportti/fi.lyma.minesweeper.logic/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>fi.lyma.logic</h3>
+<h3>fi.lyma.minesweeper.logic</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>3</td>
-            <td>75% <div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">114/151</div></div></td>
-            <td>77% <div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">85/111</div></div></td>
+            <td>89% <div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">157/177</div></div></td>
+            <td>81% <div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">114/141</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,20 +93,20 @@
 
         <tr>
             <td><a href="./Minefield.java.html">Minefield.java</a></td>
-            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">89/91</div></div></td>
-            <td><div class="coveragePercentage">92% </div><div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">77/84</div></div></td>
+            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">95/97</div></div></td>
+            <td><div class="coveragePercentage">90% </div><div class="coverage_bar"><div class="coverage_complete" style="width:90%"></div><div class="coverage_ledgend">85/94</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./MinesweeperGame.java.html">MinesweeperGame.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/35</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/19</div></div></td>
+            <td><div class="coveragePercentage">68% </div><div class="coverage_bar"><div class="coverage_complete" style="width:68%"></div><div class="coverage_ledgend">30/44</div></div></td>
+            <td><div class="coveragePercentage">65% </div><div class="coverage_bar"><div class="coverage_complete" style="width:65%"></div><div class="coverage_ledgend">17/26</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./Tile.java.html">Tile.java</a></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">25/25</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">8/8</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">32/36</div></div></td>
+            <td><div class="coveragePercentage">57% </div><div class="coverage_bar"><div class="coverage_complete" style="width:57%"></div><div class="coverage_ledgend">12/21</div></div></td>
         </tr>
 
      </tbody>
