--- a/dokumentaatio/pit-raportti/index.html
+++ b/dokumentaatio/pit-raportti/index.html
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>3</td>
-            <td>75% <div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">114/151</div></div></td>
-            <td>77% <div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">85/111</div></div></td>
+            <td>89% <div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">157/177</div></div></td>
+            <td>81% <div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">114/141</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,10 +93,10 @@
     <tbody>
 
         <tr>
-            <td><a href="./fi.lyma.logic/index.html">fi.lyma.logic</a></td>
+            <td><a href="./fi.lyma.minesweeper.logic/index.html">fi.lyma.minesweeper.logic</a></td>
             <td>3</td>
-            <td><div class="coveragePercentage">75% </div><div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">114/151</div></div></td>
-            <td><div class="coveragePercentage">77% </div><div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">85/111</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">157/177</div></div></td>
+            <td><div class="coveragePercentage">81% </div><div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">114/141</div></div></td>
         </tr>
 
      </tbody>
