Updated reports and ignroed UI classes from checkstyle

--- a/dokumentaatio/checkstyle-raportti/xref/allclasses-frame.html
+++ b/dokumentaatio/checkstyle-raportti/xref/allclasses-frame.html
@@ -12,7 +12,13 @@
 
 		<ul>
 						<li>
+				<a href="fi/lyma/minesweeper/logic/GameMode.html" target="classFrame">GameMode</a>
+			</li>
+						<li>
 				<a href="fi/lyma/minesweeper/logic/MinesweeperGame.html" target="classFrame">GameStatus</a>
+			</li>
+						<li>
+				<a href="fi/lyma/minesweeper/gui/ImageResources.html" target="classFrame">ImageResources</a>
 			</li>
 						<li>
 				<a href="fi/lyma/minesweeper/logic/ImmutableTile.html" target="classFrame">ImmutableTile</a>
@@ -39,13 +45,16 @@
 				<a href="fi/lyma/testutil/RandomMock.html" target="classFrame">RandomMock</a>
 			</li>
 						<li>
+				<a href="fi/lyma/minesweeper/gui/StatusPanel.html" target="classFrame">StatusPanel</a>
+			</li>
+						<li>
 				<a href="fi/lyma/minesweeper/logic/Tile.html" target="classFrame">Tile</a>
 			</li>
 						<li>
-				<a href="fi/lyma/minesweeper/gui/TileImages.html" target="classFrame">TileImages</a>
+				<a href="fi/lyma/minesweeper/logic/Tile.html" target="classFrame">TileStatus</a>
 			</li>
 						<li>
-				<a href="fi/lyma/minesweeper/logic/Tile.html" target="classFrame">TileStatus</a>
+				<a href="fi/lyma/minesweeper/gui/TopBar.html" target="classFrame">TopBar</a>
 			</li>
 						<li>
 				<a href="fi/lyma/util/Vector2D.html" target="classFrame">Vector2D</a>
