--- a/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/package-frame.html
+++ b/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/package-frame.html
@@ -16,13 +16,19 @@
 
       	<ul>
       		          	<li>
+            	<a href="ImageResources.html" target="classFrame">ImageResources</a>
+          	</li>
+          	          	<li>
             	<a href="MainWindow.html" target="classFrame">MainWindow</a>
           	</li>
           	          	<li>
             	<a href="MinefieldPanel.html" target="classFrame">MinefieldPanel</a>
           	</li>
           	          	<li>
-            	<a href="TileImages.html" target="classFrame">TileImages</a>
+            	<a href="StatusPanel.html" target="classFrame">StatusPanel</a>
+          	</li>
+          	          	<li>
+            	<a href="TopBar.html" target="classFrame">TopBar</a>
           	</li>
           	      	</ul>
 
