--- a/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/logic/package-frame.html
+++ b/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/logic/package-frame.html
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="GameMode.html" target="classFrame">GameMode</a>
+          	</li>
+          	          	<li>
             	<a href="MinesweeperGame.html" target="classFrame">GameStatus</a>
           	</li>
           	          	<li>
