--- a/dokumentaatio/pit-raportti/fi.lyma.minesweeper.logic/index.html
+++ b/dokumentaatio/pit-raportti/fi.lyma.minesweeper.logic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>3</td>
-            <td>89% <div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">157/177</div></div></td>
-            <td>81% <div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">114/141</div></div></td>
+            <td>4</td>
+            <td>89% <div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">176/197</div></div></td>
+            <td>77% <div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">124/162</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,21 +92,27 @@
     <tbody>
 
         <tr>
+            <td><a href="./GameMode.java.html">GameMode.java</a></td>
+            <td><div class="coveragePercentage">45% </div><div class="coverage_bar"><div class="coverage_complete" style="width:45%"></div><div class="coverage_ledgend">10/22</div></div></td>
+            <td><div class="coveragePercentage">21% </div><div class="coverage_bar"><div class="coverage_complete" style="width:21%"></div><div class="coverage_ledgend">4/19</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./Minefield.java.html">Minefield.java</a></td>
-            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">95/97</div></div></td>
-            <td><div class="coveragePercentage">90% </div><div class="coverage_bar"><div class="coverage_complete" style="width:90%"></div><div class="coverage_ledgend">85/94</div></div></td>
+            <td><div class="coveragePercentage">96% </div><div class="coverage_bar"><div class="coverage_complete" style="width:96%"></div><div class="coverage_ledgend">86/90</div></div></td>
+            <td><div class="coveragePercentage">94% </div><div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">75/80</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./MinesweeperGame.java.html">MinesweeperGame.java</a></td>
-            <td><div class="coveragePercentage">68% </div><div class="coverage_bar"><div class="coverage_complete" style="width:68%"></div><div class="coverage_ledgend">30/44</div></div></td>
-            <td><div class="coveragePercentage">65% </div><div class="coverage_bar"><div class="coverage_complete" style="width:65%"></div><div class="coverage_ledgend">17/26</div></div></td>
+            <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">49/50</div></div></td>
+            <td><div class="coveragePercentage">79% </div><div class="coverage_bar"><div class="coverage_complete" style="width:79%"></div><div class="coverage_ledgend">34/43</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./Tile.java.html">Tile.java</a></td>
-            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">32/36</div></div></td>
-            <td><div class="coveragePercentage">57% </div><div class="coverage_bar"><div class="coverage_complete" style="width:57%"></div><div class="coverage_ledgend">12/21</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">31/35</div></div></td>
+            <td><div class="coveragePercentage">55% </div><div class="coverage_bar"><div class="coverage_complete" style="width:55%"></div><div class="coverage_ledgend">11/20</div></div></td>
         </tr>
 
      </tbody>
