--- a/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/MinefieldPanel.html
+++ b/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/MinefieldPanel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en_GB" lang="en_GB">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en_US" lang="en_US">
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <title>MinefieldPanel xref</title>
 <link type="text/css" rel="stylesheet" href="../../../../stylesheet.css" />
@@ -29,20 +29,20 @@
 <a class="jxr_linenumber" name="L21" href="#L21">21</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> paintComponent(Graphics graphics) {
 <a class="jxr_linenumber" name="L22" href="#L22">22</a>          <strong class="jxr_keyword">super</strong>.paintComponent(graphics);
 <a class="jxr_linenumber" name="L23" href="#L23">23</a>          Graphics2D graphics2D = (Graphics2D) graphics;
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> x = 0; x &lt; game.getFieldWidth(); ++x) {
-<a class="jxr_linenumber" name="L25" href="#L25">25</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> y = 0; y &lt; game.getFieldHeight(); ++y) {
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> x = 0; x &lt; game.getGameMode().getFieldWidth(); ++x) {
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> y = 0; y &lt; game.getGameMode().getFieldHeight(); ++y) {
 <a class="jxr_linenumber" name="L26" href="#L26">26</a>                  <a href="../../../../fi/lyma/minesweeper/logic/ImmutableTile.html">ImmutableTile</a> tile = game.getTile(<strong class="jxr_keyword">new</strong> Vector2D&lt;&gt;(x, y));
-<a class="jxr_linenumber" name="L27" href="#L27">27</a>                  graphics2D.drawImage(TileImages.getImageWithTile(tile), x * tileSideLength, y * tileSideLength, <strong class="jxr_keyword">null</strong>);
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>                  graphics2D.drawImage(ImageResources.getImageWithTile(tile), x * tileSideLength, y * tileSideLength, <strong class="jxr_keyword">null</strong>);
 <a class="jxr_linenumber" name="L28" href="#L28">28</a>              }
 <a class="jxr_linenumber" name="L29" href="#L29">29</a>          }
 <a class="jxr_linenumber" name="L30" href="#L30">30</a>          <strong class="jxr_keyword">if</strong> (highlightedTile != <strong class="jxr_keyword">null</strong>) {
-<a class="jxr_linenumber" name="L31" href="#L31">31</a>              graphics2D.drawImage(TileImages.TILE_OPEN, highlightedTile.getX() * tileSideLength, highlightedTile.getY() * tileSideLength, <strong class="jxr_keyword">null</strong>);
+<a class="jxr_linenumber" name="L31" href="#L31">31</a>              graphics2D.drawImage(ImageResources.TILE_OPEN, highlightedTile.getX() * tileSideLength, highlightedTile.getY() * tileSideLength, <strong class="jxr_keyword">null</strong>);
 <a class="jxr_linenumber" name="L32" href="#L32">32</a>          }
 <a class="jxr_linenumber" name="L33" href="#L33">33</a>      }
 <a class="jxr_linenumber" name="L34" href="#L34">34</a>  
 <a class="jxr_linenumber" name="L35" href="#L35">35</a>      @Override
 <a class="jxr_linenumber" name="L36" href="#L36">36</a>      <strong class="jxr_keyword">public</strong> Dimension getPreferredSize() {
-<a class="jxr_linenumber" name="L37" href="#L37">37</a>          <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">new</strong> Dimension(tileSideLength * game.getFieldWidth(), tileSideLength * game.getFieldHeight());
+<a class="jxr_linenumber" name="L37" href="#L37">37</a>          <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">new</strong> Dimension(tileSideLength * game.getGameMode().getFieldWidth(), tileSideLength * game.getGameMode().getFieldHeight());
 <a class="jxr_linenumber" name="L38" href="#L38">38</a>      }
 <a class="jxr_linenumber" name="L39" href="#L39">39</a>  
 <a class="jxr_linenumber" name="L40" href="#L40">40</a>      <strong class="jxr_keyword">public</strong> Vector2D&lt;Integer&gt; convertScreenToWorldCoordinates(Vector2D&lt;Integer&gt; screenCoords) {
