--- a/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/package-summary.html
+++ b/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/gui/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="ImageResources.html" target="classFrame">ImageResources</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="MainWindow.html" target="classFrame">MainWindow</a>
               		</td>
             	</tr>
@@ -47,7 +52,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="TileImages.html" target="classFrame">TileImages</a>
+                		<a href="StatusPanel.html" target="classFrame">StatusPanel</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="TopBar.html" target="classFrame">TopBar</a>
               		</td>
             	</tr>
 				        	</tbody>
