--- a/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/logic/package-summary.html
+++ b/dokumentaatio/checkstyle-raportti/xref/fi/lyma/minesweeper/logic/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="GameMode.html" target="classFrame">GameMode</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="MinesweeperGame.html" target="classFrame">GameStatus</a>
               		</td>
             	</tr>
